--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto Slab', serif;
+  
 }
+
+button {
+  cursor: pointer;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
