--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,4 @@ button {
 }
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css');
