--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
+.body {
+  font-family: 'Josefin Sans', cursive;
+}
 .App {
   text-align: center;
+
 }
 
 .center {
   display: flex;
   justify-content: center;
 }
-/* 
-.particles {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1
-} */
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
