--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto Slab', serif;
-  
+  font-family: 'Ubuntu', sans-serif;
+}
+.heading {
+  font-weight: 700;
+}
+.subheading {
+  font-weight: 300;
 }
 
 button {
   cursor: pointer;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css');
